--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,27 @@
-logs
-*.log
+# dependencies
+node_modules/
+
+# production
+dist/
+build/
+
+# env files
+.env
+.env.local
+.env.*.local
+
+# logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
-
-.vscode/*
-!.vscode/extensions.json
-.idea
+# OS files
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
-.env
+Thumbs.db
+
+# editor configs
+.vscode/
+.idea/
+
+# cache
+.eslintcache
